# MongoDB-RabbitMQ

./: README.md  pyproject.toml
task1/: app_mongoengine.py
task2/: consumer_email.py  consumer_sms.py  models.py  producer.py
