[tool.poetry]
name = "homework08"
version = "0.1.0"
description = ""
authors = ["ivan-ishchenko991 <lvan.lshchenko19.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
pymongo = "^4.5.0"
redis = "^5.0.0"
faker = "^19.6.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
